# ai-mirror-jury

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
_automations/: SKILL.md
_automations/scripts/: session_manager.py
_automations/workflows/: deep-dive.md  full-session.md
_context/guardrails/: SKILL.md
_context/personas/: SKILL.md
examples/: api_usage.py  basic_verdict.py  custom_dataset.py  deliberation.py  run_all_scenarios.py
jury/ask-all/: SKILL.md
jury/assemble/: SKILL.md
jury/speak-to/: SKILL.md
jury/synthesize/: SKILL.md
src/mirror_jury/: __init__.py  __main__.py
src/mirror_jury/analysis/: __init__.py  aggregator.py
src/mirror_jury/context/: __init__.py  guardrails.py
src/mirror_jury/core/: __init__.py  case.py  persona.py  response.py  verdict.py
src/mirror_jury/datasets/: __init__.py  base.py  custom.py  persona_hub.py
src/mirror_jury/jury/: __init__.py  deliberation.py  juror.py  panel.py
src/mirror_jury/scenarios/: __init__.py  library.py
src/mirror_jury/session/: __init__.py  cohort.py  juror.py  mirror_jury.py
tests/: test_core.py
