[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-mirror-jury"
version = "0.1.0"
description = "Simulate how a diverse panel of AI personas would respond to any question."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "datasets>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
